# Python-Krogoco-Ics

./: .gitignore  README.md  pyproject.toml
src/krog_company_ics/: __init__.py  krogoco_ics.py
tests/: test_scrape_events.py  test_year_rollover.py
tests/fixtures/: calendar.html  calendar_duplicates.html  calendar_year_rollover.html
